--- a/persianmaterialdatetimepicker/src/main/res/layout/mdtp_date_picker_header_view.xml
+++ b/persianmaterialdatetimepicker/src/main/res/layout/mdtp_date_picker_header_view.xml
@@ -20,7 +20,9 @@
     android:layout_height="@dimen/mdtp_date_picker_header_height"
     android:background="@color/mdtp_calendar_header"
     android:gravity="center"
+    android:importantForAccessibility="no"
     android:includeFontPadding="false"
     android:textColor="@color/mdtp_white"
     android:textSize="@dimen/mdtp_date_picker_header_text_size"
-    android:importantForAccessibility="no" />
+    />
+    <!-- From: file:/E:/Program%20Files/Android/Github/PersianMaterialDateTimePicker/persianmaterialdatetimepicker/src/main/res/layout/mdtp_date_picker_header_view.xml -->
