--- a/persianmaterialdatetimepicker/src/main/res/layout/mdtp_year_label_text_view.xml
+++ b/persianmaterialdatetimepicker/src/main/res/layout/mdtp_year_label_text_view.xml
@@ -21,4 +21,6 @@
     android:layout_gravity="center"
     android:gravity="center"
     android:textColor="@color/mdtp_date_picker_year_selector"
-    android:textSize="@dimen/mdtp_year_label_text_size" />
+    android:textSize="@dimen/mdtp_year_label_text_size"
+    />
+    <!-- From: file:/E:/Program%20Files/Android/Github/PersianMaterialDateTimePicker/persianmaterialdatetimepicker/src/main/res/layout/mdtp_year_label_text_view.xml -->
