--- a/persianmaterialdatetimepicker/src/main/res/color/mdtp_date_picker_year_selector.xml
+++ b/persianmaterialdatetimepicker/src/main/res/color/mdtp_date_picker_year_selector.xml
@@ -14,10 +14,8 @@
      limitations under the License.
 -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item android:state_pressed="true" android:color="@color/mdtp_accent_color"/>
-    <item android:state_selected="true" android:color="@color/mdtp_white"/>
-    <item android:state_pressed="false" android:state_selected="false"
-        android:color="@color/mdtp_date_picker_text_normal"/>
-
-</selector>
+  <item android:color="@color/mdtp_accent_color" android:state_pressed="true"/>
+  <item android:color="@color/mdtp_white" android:state_selected="true"/>
+  <item android:color="@color/mdtp_date_picker_text_normal" android:state_pressed="false"
+      android:state_selected="false"/>
+</selector><!-- From: file:/E:/Program%20Files/Android/Github/PersianMaterialDateTimePicker/persianmaterialdatetimepicker/src/main/res/color/mdtp_date_picker_year_selector.xml -->
