--- a/persianmaterialdatetimepicker/src/main/res/drawable/mdtp_done_background_color_dark.xml
+++ b/persianmaterialdatetimepicker/src/main/res/drawable/mdtp_done_background_color_dark.xml
@@ -14,12 +14,10 @@
      limitations under the License.
 -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_focused="true"
-          android:state_pressed="false"
-          android:drawable="@color/mdtp_red_focused" />
-
-    <item android:state_pressed="true"
-          android:drawable="@color/mdtp_red" />
-
-    <item android:drawable="@color/mdtp_light_gray" />
-</selector>
+  <item android:drawable="@color/mdtp_red_focused"
+      android:state_focused="true"
+      android:state_pressed="false"/>
+  <item android:drawable="@color/mdtp_red"
+      android:state_pressed="true"/>
+  <item android:drawable="@color/mdtp_light_gray"/>
+</selector><!-- From: file:/E:/Program%20Files/Android/Github/PersianMaterialDateTimePicker/persianmaterialdatetimepicker/src/main/res/drawable/mdtp_done_background_color_dark.xml -->
