--- a/persianmaterialdatetimepicker/src/main/res/drawable/mdtp_material_button_selected.xml
+++ b/persianmaterialdatetimepicker/src/main/res/drawable/mdtp_material_button_selected.xml
@@ -2,12 +2,12 @@
 <inset xmlns:android="http://schemas.android.com/apk/res/android"
     android:insetBottom="6dp"
     android:insetTop="6dp">
-    <shape xmlns:android="http://schemas.android.com/apk/res/android"
-        android:shape="rectangle">
-        <corners android:radius="2dp" />
-        <solid android:color="@color/mdtp_button_selected" />
-        <padding
-            android:bottom="4dp"
-            android:top="4dp" />
-    </shape>
-</inset>
+  <shape xmlns:android="http://schemas.android.com/apk/res/android"
+      android:shape="rectangle">
+    <corners android:radius="2dp"/>
+    <solid android:color="@color/mdtp_button_selected"/>
+    <padding
+        android:bottom="4dp"
+        android:top="4dp"/>
+  </shape>
+</inset><!-- From: file:/E:/Program%20Files/Android/Github/PersianMaterialDateTimePicker/persianmaterialdatetimepicker/src/main/res/drawable/mdtp_material_button_selected.xml -->
