--- a/persianmaterialdatetimepicker/src/main/res/layout/mdtp_date_picker_view_animator.xml
+++ b/persianmaterialdatetimepicker/src/main/res/layout/mdtp_date_picker_view_animator.xml
@@ -14,10 +14,11 @@
      limitations under the License.
 -->
 <com.mohamadamin.persianmaterialdatetimepicker.date.AccessibleDateAnimator
-     xmlns:android="http://schemas.android.com/apk/res/android"
-     android:id="@+id/animator"
-     android:layout_width="@dimen/mdtp_date_picker_component_width"
-     android:layout_height="@dimen/mdtp_date_picker_view_animator_height"
-     android:gravity="center"
-     android:paddingLeft="8dp"
-     android:paddingRight="8dp" />
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/animator"
+    android:layout_width="@dimen/mdtp_date_picker_component_width"
+    android:layout_height="@dimen/mdtp_date_picker_view_animator_height"
+    android:gravity="center"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
+    /><!-- From: file:/E:/Program%20Files/Android/Github/PersianMaterialDateTimePicker/persianmaterialdatetimepicker/src/main/res/layout/mdtp_date_picker_view_animator.xml -->
