--- a/persianmaterialdatetimepicker/src/main/res/layout/mdtp_time_picker_dialog.xml
+++ b/persianmaterialdatetimepicker/src/main/res/layout/mdtp_time_picker_dialog.xml
@@ -18,44 +18,47 @@
     android:id="@+id/time_picker_dialog"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:background="@color/mdtp_background_color"
-    android:focusable="true" >
-    <LinearLayout
-        android:id="@+id/time_display_background"
+    android:focusable="true"
+    android:orientation="vertical"
+    >
+  <LinearLayout
+      android:id="@+id/time_display_background"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:background="@color/mdtp_accent_color"
+      android:orientation="vertical"
+      >
+    <TextView
+        android:id="@+id/time_picker_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@color/mdtp_accent_color" >
-
-        <TextView
-            android:id="@+id/time_picker_header"
-            android:visibility="gone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:includeFontPadding="false"
-            android:textSize="@dimen/mdtp_time_picker_header_text_size"
-            android:singleLine="true"
-            android:padding="8dp"
-            android:textAllCaps="true"
-            android:textColor="@color/mdtp_white"
-            android:background="@color/mdtp_accent_color_dark"/>
-
-        <include
-            layout="@layout/mdtp_time_header_label"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/mdtp_header_height"
-            android:layout_gravity="center" />
-    </LinearLayout>
-    <com.mohamadamin.persianmaterialdatetimepicker.time.RadialPickerLayout
-        android:id="@+id/time_picker"
-        android:layout_height="@dimen/mdtp_time_picker_height"
-        android:layout_width="@dimen/mdtp_picker_dimen"
+        android:background="@color/mdtp_accent_color_dark"
+        android:gravity="center"
+        android:includeFontPadding="false"
+        android:padding="8dp"
+        android:singleLine="true"
+        android:textAllCaps="true"
+        android:textColor="@color/mdtp_white"
+        android:textSize="@dimen/mdtp_time_picker_header_text_size"
+        android:visibility="gone"
+        />
+    <include
+        layout="@layout/mdtp_time_header_label"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/mdtp_header_height"
         android:layout_gravity="center"
-        android:background="@color/mdtp_circle_background"
-        android:focusable="true"
-        android:focusableInTouchMode="true" />
-
-    <include layout="@layout/mdtp_done_button" />
+        />
+  </LinearLayout>
+  <com.mohamadamin.persianmaterialdatetimepicker.time.RadialPickerLayout
+      android:id="@+id/time_picker"
+      android:layout_width="@dimen/mdtp_picker_dimen"
+      android:layout_height="@dimen/mdtp_time_picker_height"
+      android:layout_gravity="center"
+      android:background="@color/mdtp_circle_background"
+      android:focusable="true"
+      android:focusableInTouchMode="true"
+      />
+  <include layout="@layout/mdtp_done_button"/>
 </LinearLayout>
+    <!-- From: file:/E:/Program%20Files/Android/Github/PersianMaterialDateTimePicker/persianmaterialdatetimepicker/src/main/res/layout/mdtp_time_picker_dialog.xml -->
