--- a/persianmaterialdatetimepicker/src/main/res/layout-w270dp-h560dp/mdtp_date_picker_dialog.xml
+++ b/persianmaterialdatetimepicker/src/main/res/layout-w270dp-h560dp/mdtp_date_picker_dialog.xml
@@ -15,16 +15,18 @@
      limitations under the License.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/mdtp_date_picker_component_width"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="@color/mdtp_date_picker_view_animator"
     android:gravity="center"
     android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/mdtp_selected_calendar_layout_height"
+        android:layout_height="wrap_content"
         android:orientation="vertical" >
+
+        <include layout="@layout/mdtp_date_picker_header_view" />
 
         <include layout="@layout/mdtp_date_picker_selected_date" />
     </LinearLayout>
@@ -33,4 +35,4 @@
 
     <include layout="@layout/mdtp_done_button" />
 
-</LinearLayout><!-- From: file:/E:/Program%20Files/Android/Github/PersianMaterialDateTimePicker/persianmaterialdatetimepicker/src/main/res/layout/mdtp_date_picker_dialog.xml -->
+</LinearLayout><!-- From: file:/E:/Program%20Files/Android/Github/PersianMaterialDateTimePicker/persianmaterialdatetimepicker/src/main/res/layout-w270dp-h560dp/mdtp_date_picker_dialog.xml -->
