--- a/persianmaterialdatetimepicker/src/main/res/layout/mdtp_date_picker_selected_date.xml
+++ b/persianmaterialdatetimepicker/src/main/res/layout/mdtp_date_picker_selected_date.xml
@@ -24,7 +24,7 @@
     android:gravity="center"
     android:orientation="vertical"
     >
-  <com.mohamadamin.persianmaterialdatetimepicker.AccessibleLinearLayout
+  <com.golrangsystem.persianmaterialdatetimepicker.AccessibleLinearLayout
       android:id="@+id/date_picker_month_and_day"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -58,8 +58,8 @@
         android:textSize="@dimen/mdtp_selected_date_day_size"
         tools:text="15"
         />
-  </com.mohamadamin.persianmaterialdatetimepicker.AccessibleLinearLayout>
-  <com.mohamadamin.persianmaterialdatetimepicker.AccessibleTextView
+  </com.golrangsystem.persianmaterialdatetimepicker.AccessibleLinearLayout>
+  <com.golrangsystem.persianmaterialdatetimepicker.AccessibleTextView
       android:id="@+id/date_picker_year"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
