--- a/persianmaterialdatetimepicker/src/main/res/layout-sw600dp-land/mdtp_date_picker_dialog.xml
+++ b/persianmaterialdatetimepicker/src/main/res/layout-sw600dp-land/mdtp_date_picker_dialog.xml
@@ -15,29 +15,27 @@
      limitations under the License.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="wrap_content"
     android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@color/mdtp_background_color"
     android:orientation="vertical"
-    android:background="@color/mdtp_background_color">
+    >
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="@dimen/mdtp_date_picker_view_animator_height"
+      android:gravity="center"
+      android:orientation="horizontal"
+      >
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/mdtp_date_picker_view_animator_height"
-        android:gravity="center"
-        android:orientation="horizontal" >
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:orientation="vertical" >
-
-            <include layout="@layout/mdtp_date_picker_header_view" />
-
-            <include layout="@layout/mdtp_date_picker_selected_date" />
-        </LinearLayout>
-
-        <include layout="@layout/mdtp_date_picker_view_animator" />
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        >
+      <include layout="@layout/mdtp_date_picker_header_view"/>
+      <include layout="@layout/mdtp_date_picker_selected_date"/>
     </LinearLayout>
-
-    <include layout="@layout/mdtp_done_button" />
+    <include layout="@layout/mdtp_date_picker_view_animator"/>
+  </LinearLayout>
+  <include layout="@layout/mdtp_done_button"/>
 </LinearLayout><!-- From: file:/E:/Program%20Files/Android/Github/PersianMaterialDateTimePicker/persianmaterialdatetimepicker/src/main/res/layout-sw600dp-land/mdtp_date_picker_dialog.xml -->
