--- a/persianmaterialdatetimepicker/src/main/res/layout-w270dp-h560dp/mdtp_date_picker_dialog.xml
+++ b/persianmaterialdatetimepicker/src/main/res/layout-w270dp-h560dp/mdtp_date_picker_dialog.xml
@@ -19,20 +19,16 @@
     android:layout_height="wrap_content"
     android:background="@color/mdtp_date_picker_view_animator"
     android:gravity="center"
-    android:orientation="vertical" >
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
-
-        <include layout="@layout/mdtp_date_picker_header_view" />
-
-        <include layout="@layout/mdtp_date_picker_selected_date" />
-    </LinearLayout>
-
-    <include layout="@layout/mdtp_date_picker_view_animator" />
-
-    <include layout="@layout/mdtp_done_button" />
-
+    android:orientation="vertical"
+    >
+  <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      >
+    <include layout="@layout/mdtp_date_picker_header_view"/>
+    <include layout="@layout/mdtp_date_picker_selected_date"/>
+  </LinearLayout>
+  <include layout="@layout/mdtp_date_picker_view_animator"/>
+  <include layout="@layout/mdtp_done_button"/>
 </LinearLayout><!-- From: file:/E:/Program%20Files/Android/Github/PersianMaterialDateTimePicker/persianmaterialdatetimepicker/src/main/res/layout-w270dp-h560dp/mdtp_date_picker_dialog.xml -->
