--- a/persianmaterialdatetimepicker/src/main/res/layout/mdtp_time_picker_dialog.xml
+++ b/persianmaterialdatetimepicker/src/main/res/layout/mdtp_time_picker_dialog.xml
@@ -50,7 +50,7 @@
         android:layout_gravity="center"
         />
   </LinearLayout>
-  <com.mohamadamin.persianmaterialdatetimepicker.time.RadialPickerLayout
+  <com.golrangsystem.persianmaterialdatetimepicker.time.RadialPickerLayout
       android:id="@+id/time_picker"
       android:layout_width="@dimen/mdtp_picker_dimen"
       android:layout_height="@dimen/mdtp_time_picker_height"
