--- a/persianmaterialdatetimepicker/src/main/res/layout/mdtp_date_picker_header_view.xml
+++ b/persianmaterialdatetimepicker/src/main/res/layout/mdtp_date_picker_header_view.xml
@@ -18,6 +18,7 @@
     android:id="@+id/date_picker_header"
     android:layout_width="@dimen/mdtp_date_picker_component_width"
     android:layout_height="@dimen/mdtp_date_picker_header_height"
+    android:visibility="visible"
     android:background="@color/mdtp_calendar_header"
     android:gravity="center"
     android:importantForAccessibility="no"
